fix section.chat-on, gap .info-contact and add card

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,32 +21,34 @@
 
 
 body {
-    background: linear-gradient(to top, #d2dadd, #dddbd1 85%, #009789 20%, #009789 75%);
+    background-image: linear-gradient(to top, #d2dadd, #dddbd1 85%, #009789 20%, #009789 75%);
     height: 100vh;
     background-repeat: no-repeat;
+    overflow: hidden;
 }
 
-.container {
+#app {
     width: 80%;
-    height: 90vh;
+    height: 95vh;
     max-width: 1176px;
-    margin: auto;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin: 1rem auto 2rem;
     display: flex;
     flex-direction: row;
     box-sizing: border-box;
+
+    .left {
+        width: 35%;
+        height: 100%;
+    }
+
+    .right {
+        width: 70%;
+        height: 100%;
+    }
 }
 
-.left {
-    width: 30%;
-    height: 90vh;
-}
 
-.right {
-    width: 70%;
-    height: 90vh;
-}
+
 
 .fa-solid,
 .fa-regular {
@@ -94,7 +96,6 @@ body {
     color: var(--bz-notification);
     border-radius: 100%;
     margin-left: 20px;
-
 }
 
 /*END REGION NOTICE*/
@@ -121,13 +122,18 @@ body {
     margin: auto;
 }
 
+a{
+    color: var(--bz-icon-bottom);
+}
+
 /*END REGION SEARCH*/
 
 .contacts,
 .chat {
     /*REGION CHAT--REGION RIGHT*/
-    overflow-y: scroll;
+    overflow-y: auto;
 }
+
 
 .card {
     background-color: var(--bz-chat-ligther);
@@ -153,6 +159,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    gap: 5px;
 }
 
 .text-light {
@@ -169,12 +176,17 @@ body {
 }
 
 /*END REGION CONTACTS--END REGION LEFT*/
+.info-chaton{
+    display: flex;
+    flex-direction: row;
+}
+/*REGION CHAT-ON*/
 
 .chat {
     background-image: url(./img/mine.jpg);
-    height: 59vh;
+    /*height: calc(100%-165px);*/
+    height: 80%;
 }
-
 /*REGION CHAT*/
 
 .typing {
@@ -203,10 +215,6 @@ body {
     border: none;
     font-size: 1rem;
 }
-
-
-
-
 
 
 
@@ -249,10 +257,9 @@ body {
         display: none;
     }
 
-    #write{
+    #write {
         width: 100%;
         margin: auto;
     }
-
 
 }
